# -RAG-Based-Question-Answering-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_FLOW.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
backend/: config.py
backend/agent/: agent.py  tools.py
backend/ingestion/: chunking.py  ingest.py  loader.py
backend/rag/: embeddings.py  pipeline.py  reranker.py  retriever.py
backend/streaming/: stream.py
backend/vectorstore/: faiss_store.py
frontend/: index.html  script.js  style.css
